--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server/kanban-server.js"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "marked": "^15.0.4"
