feat: prepare project for open source release
  This commit transforms TKR-Kanban into TaskBoardAI, adding OSS documentation (CODE_OF_CONDUCT,
  CONTRIBUTING, LICENSE), test infrastructure with Jest, API docs with JSDoc, comprehensive
  tutorials, and project metadata updates. Includes OSS planning documents and revised README
  files for public release.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
+# Project
 node_modules
 package-lock.json
+
+# System
 .DS_Store
 
+# Documentation
+docs/api/*
+!docs/api/README.md
+
+# Boards
 boards
 !boards/_kanban_example*
+
+# Test Coverage
+/coverage/
