Refactor docs deployment to release workflow with   versioning
  Move documentation generation from CI to release
  workflow, adding proper version tracking with
  /latest/ and /versioned/ directories. Update GitHub
  Actions versions to v4 and Node.js to 20.x across
  all workflows.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,9 +74,4 @@ jobs:
           name: docs-logs
           path: docs.log
           retention-days: 30
-      - name: Deploy to GitHub Pages
-        if: github.ref == 'refs/heads/main'
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: docs/api
-          branch: gh-pages
+      # Removed GitHub Pages deployment - now handled in release workflow
