fix(workflow): Update …       sync-public-branch repository condition
      Updates the repository condition check
      to use TuckerTucker/tkr-kanban instead
      of TuckerTucker/TaskBoardAI, allowing
      the workflow to run in this repository.

--- a/.github/workflows/sync-public-branch.yml
+++ b/.github/workflows/sync-public-branch.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
-    if: github.repository == 'TuckerTucker/TaskBoardAI'
+    if: github.repository == 'TuckerTucker/tkr-kanban'
     steps:
       - uses: actions/checkout@v4
         with:
