--- a/.github/workflows/sync-public-branch.yml
+++ b/.github/workflows/sync-public-branch.yml
@@ -115,5 +115,13 @@ jobs:
           git add .
           git commit -m "${{ github.event.inputs.message || 'Sync public-release branch with latest main branch changes' }}" || true
       
+      - name: Add public remote
+        run: |
+          git remote -v
+          git remote remove public || true
+          git remote add public https://github.com/TuckerTucker/TaskBoardAI.git
+          git remote -v
+      
       - name: Push changes
-        run: git push public public-release
+        run: |
+          git push public public-release
