--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "docs:serve": "http-server docs/api -o -p 8080",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:token-opt": "jest token-optimization",
+    "benchmark:tokens": "node tests/benchmarks/token-optimization-benchmark.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.2.0",
