test(mcp): implement card-first architecture   …       tests and mocks
      - Added Babel configuration for Jest ES module support
      - Created mock implementations for Board model and MCP handlers
      - Implemented extensive tests for card-based operations (get,
      update, move)
      - Added test utilities for consistent test data generation
      - Re-enabled previously skipped tests with proper mocking
      framework

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "marked": "^15.0.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
     "better-docs": "^2.7.3",
     "concurrently": "^9.1.2",
     "http-server": "^14.1.1",
