feat(npm): add npm publishing to GitHub workflows
  - Add npm publish step to release.yml workflow
  - Add version verification to sync-to-public.yml
  workflow
  - Ensure npm package is published automatically on
  new releases
  - Enable verification that published npm version
  matches GitHub code

  This change automates the npm package publishing
  process so releases
  are automatically deployed to the npm registry
  without manual steps.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,11 @@ jobs:
       - run: npm test
       - run: npm run test:coverage
       
+      - name: Publish to NPM
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
