--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taskboardai",
-  "version": "1.0.0",
+  "version": "1.2.1",
   "description": "A lightweight, file-based kanban board with AI integration through Claude",
   "main": "server/server.js",
   "bin": {
@@ -59,5 +59,8 @@
   "homepage": "https://github.com/TuckerTucker/TaskBoardAI",
   "engines": {
     "node": ">=16.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
