refactor(release): improve release process and npm   publishing
  - Move npm publishing from release.yml to
  sync-to-public.yml workflow
  - Update release.sh to automatically maintain
  package.json version
  - Add publishConfig section to package.json during
  release
  - Allow manual triggering of npm publish via
  workflow_dispatch
  - Ensure proper version synchronization between
  repos

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,10 +23,7 @@ jobs:
       - run: npm test
       - run: npm run test:coverage
       
-      - name: Publish to NPM
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      # NPM publishing is now handled by the sync-to-public workflow
       
       - name: Create Release
         id: create_release
