--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,9 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
+          # Use cache with the package-lock.json file
           cache: 'npm'
+          cache-dependency-path: package-lock.json
       
       - run: npm ci
       - run: npm test
