--- a/.github/workflows/sync-to-public.yml
+++ b/.github/workflows/sync-to-public.yml
@@ -325,8 +325,7 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
-          # Disable cache since lock file is not always copied to the public branch
-          cache: 'none'
+          # No cache configuration, since 'none' is not supported
 
       - name: Install dependencies
         if: steps.sync-details.outputs.version != '' || github.event.inputs.publish_npm == 'true'
